fix drawing on safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ a {
   background-color: blue; }
 
 .section-heading {
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-bottom: 1rem;
   padding: 0; }
 
@@ -143,7 +143,8 @@ a {
     list-style-type: none;
     -webkit-padding-start: 0rem; }
   .project li {
-    margin: 1rem 0; }
+    margin: 1rem 0;
+    line-height: 1.5; }
   .project button {
     margin: 0.25rem 0; }
 
@@ -175,7 +176,7 @@ nav {
   background-color: white; }
   nav a {
     color: #212529;
-    font-weight: 700; }
+    font-weight: 600; }
     nav a:hover {
       border-bottom: 2px solid transparent; }
 
