--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -80,7 +80,7 @@ a {
 }
 
 .section-heading {
-	font-size: 2rem;
+	font-size: 2.5rem;
 	margin-bottom: 1rem;
 	padding: 0;
 }
