--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -4,7 +4,7 @@ nav {
   background-color: white;
   a {
     color: $dark;
-    font-weight: 700;
+    font-weight: 600;
     &:hover {
       border-bottom: 2px solid transparent;
     }
