--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -32,6 +32,7 @@
 	}
 	li {
 		margin: 1rem 0;
+		line-height: 1.5;
 	}
 	button {
 		margin: 0.25rem 0;
